--- a/logo.html
+++ b/logo.html
@@ -121,8 +121,8 @@
                     <img src="https://farm2.staticflickr.com/1969/44807998995_ac1996a13e_o_d.jpg" style="width:100%">
                   </div>-->
                   
-                  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                  <a class="prev" onclick="plusSlides(-1)"><span class="prev_bg">&#10094;</span></a>
+                  <a class="next" onclick="plusSlides(1)"><span class="next_bg">&#10095;</span></a>
               
                   <div class="caption-container">
                     <p id="caption"></p>
