--- a/logo.html
+++ b/logo.html
@@ -92,12 +92,12 @@
                 <div class="modal-content">
               
                   <div class="mySlides">
-                    <div class="numbertext">Coffeine92</div>
+                    <div class="numbertext"></div>
                     <img src="caffeine92/caffeine92-a.jpg" style="width:100%">
                   </div>
               
                   <div class="mySlides">
-                    <div class="numbertext">Mapa Cuisine</div>
+                    <div class="numbertext"></div>
                     <img src="MaPaCuisine/MaPaCuisine-2.jpg" style="width:100%">
                   </div>
               <!--
