--- a/logo.html
+++ b/logo.html
@@ -73,7 +73,7 @@
             <div class="intro">
                 <h2>LOGO DESIGN</h2>
                 <h3>Representing a brand</h3>
-                <p>Logo inspired by establishments and businesses.</p>
+                <!--<p>Logo inspired by establishments and businesses.</p>-->
             </div><!--INTRO ENDS-->
             <div class="block_1">
                 <ul>
